--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My First Bitstarteer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel ="stylesheet"
-	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min..css">
+	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <style type="text/css">
       /* Large Desktop*/
       @media (min-width: 980px) {
